# L10nXcstrings

./: L10nXcstrings.py  LICENSE  README.md  setup.cfg
.github/: FUNDING.yml
