[metadata]
name = l10n_xcstrings
version = 0.1.0
description = Generate Swift code from .xcstrings
author = Ayren King
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aking618/L10nXcstrings

[options]
py_modules = L10nXcstrings
python_requires = >=3.7

[options.entry_points]
console_scripts =
    l10n-xcstrings = L10nXcstrings:main
